@@ -27,12 +27,26 @@ Readonly::Hash my %ACADVER => (
 	'AC1012' => 'Release 13',
 	'AC1013' => '??',
 	'AC1014' => 'Release 14',
-	'AC1015' => 'AutoCAD 2000/2000i/2002',
-	'AC1018' => 'AutoCAD 2004/2005/2006',
-	'AC1021' => 'AutoCAD 2007/2008/2009',
-	'AC1024' => 'AutoCAD 2010/2011/2012',
-	'AC1027' => 'AutoCAD 2013/2014/2015/2016/2017',
-	'AC1032' => 'AutoCAD 2018/2019/2020',
+	'AC1015' => 'AutoCAD 2000',
+	'AC1016' => 'AutoCAD 2000i',
+	'AC1017' => 'AutoCAD 2002',
+	'AC1018' => 'AutoCAD 2004',
+	'AC1019' => 'AutoCAD 2005',
+	'AC1020' => 'AutoCAD 2006',
+	'AC1021' => 'AutoCAD 2007',
+	'AC1022' => 'AutoCAD 2008',
+	'AC1023' => 'AutoCAD 2009',
+	'AC1024' => 'AutoCAD 2010',
+	'AC1025' => 'AutoCAD 2011',
+	'AC1026' => 'AutoCAD 2012',
+	'AC1027' => 'AutoCAD 2013',
+	'AC1028' => 'AutoCAD 2014',
+	'AC1029' => 'AutoCAD 2015',
+	'AC1030' => 'AutoCAD 2016',
+	'AC1031' => 'AutoCAD 2017',
+	'AC1032' => 'AutoCAD 2018',
+	'AC1033' => 'AutoCAD 2019',
+	'AC1034' => 'AutoCAD 2020',
 );
 
 our $VERSION = 0.04;
@@ -153,15 +167,29 @@ Returns array of identifiers.
  #     [11] "AC1013",
  #     [12] "AC1014",
  #     [13] "AC1015",
- #     [14] "AC1018",
- #     [15] "AC1021",
- #     [16] "AC1024",
- #     [17] "AC1027",
- #     [18] "AC1032",
- #     [19] "AC2.10",
- #     [20] "AC2.21",
- #     [21] "AC2.22",
- #     [22] "MC0.0"
+ #     [14] "AC1016",
+ #     [15] "AC1017",
+ #     [16] "AC1018",
+ #     [17] "AC1019",
+ #     [18] "AC1020",
+ #     [19] "AC1021",
+ #     [20] "AC1022",
+ #     [21] "AC1023",
+ #     [22] "AC1024",
+ #     [23] "AC1025",
+ #     [24] "AC1026",
+ #     [25] "AC1027",
+ #     [26] "AC1028",
+ #     [27] "AC1029",
+ #     [28] "AC1030",
+ #     [29] "AC1031",
+ #     [30] "AC1032",
+ #     [31] "AC1033",
+ #     [32] "AC1034",
+ #     [33] "AC2.10",
+ #     [34] "AC2.21",
+ #     [35] "AC2.22",
+ #     [36] "MC0.0"
  # ]
 
 =head1 EXAMPLE2
@@ -201,11 +229,25 @@ Returns array of identifiers.
  #     [15] "AC1013",
  #     [16] "AC1014",
  #     [17] "AC1015",
- #     [18] "AC1018",
- #     [19] "AC1021",
- #     [20] "AC1024",
- #     [21] "AC1027",
- #     [22] "AC1032",
+ #     [18] "AC1016",
+ #     [19] "AC1017",
+ #     [20] "AC1018",
+ #     [21] "AC1019",
+ #     [22] "AC1020",
+ #     [23] "AC1021",
+ #     [24] "AC1022",
+ #     [25] "AC1023",
+ #     [26] "AC1024",
+ #     [27] "AC1025",
+ #     [28] "AC1026",
+ #     [29] "AC1027",
+ #     [30] "AC1028",
+ #     [31] "AC1029",
+ #     [32] "AC1030",
+ #     [33] "AC1031",
+ #     [34] "AC1032",
+ #     [35] "AC1033",
+ #     [36] "AC1034",
  # ]
 
 =head1 DEPENDENCIES
